# tast_task_python_data

./: .gitignore  README.md  ReadME.txt  alembic.ini  api.py  api_start.sh  csv_reader.py  db.py  db_insert_start.sh  file_handler.py  first_start.sh  main.py  pyproject.toml  requirements.txt
app/: docker-compose.yaml
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: documents.py
app/core/: config.py
app/crud/: crud_document.py
app/db/: base.py  database.py
app/models/: document.py
app/schemas/: __init__.py  document.py
migration/: env.py
migration/versions/: 2022_08_18_2258-3991ccf968c5_init.py
utils/: dataframe.py
