[tool.poetry]
name = "tast_task_python_data"
version = "0.1.0"
description = "Test task"
authors = ["Алексей Андреев <alexandreev.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.2"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
SQLAlchemy = {extras = ["postgresql"], version = "^1.4.40"}
psycopg2 = "^2.9.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
reorder-python-imports = "^3.8.2"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"